<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_secret_shopper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ebookfrenzy.secretshopper.SecretShopperActivity">

    <CheckBox
        android:text="@string/happy_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/employeeServiceTextView"
        android:layout_alignStart="@+id/employeeServiceTextView"
        android:layout_marginTop="14dp"
        android:id="@+id/happyCheckBox" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/yesNoRadioGroupBox"
        android:layout_below="@+id/customerServiceTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:text="@string/yes_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yesRadioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/i_asked_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iAskedRadioButton"
            android:layout_weight="1.46" />

        <RadioButton
            android:text="@string/no_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noRadioButton"
            android:layout_weight="1" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/nameEstablishmentEditText"
        android:inputType="text"
        android:hint="@string/name_establishment_edit_text_hint"
        android:layout_below="@+id/nameEstablishmentTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/name_establishment_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEstablishmentTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp" />

    <TextView
        android:text="@string/employee_service_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/employeeServiceTextView"
        android:layout_below="@+id/nameEstablishmentEditText"
        android:layout_alignStart="@+id/nameEstablishmentTextView" />

    <CheckBox
        android:text="@string/fair_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fairCheckBox"
        android:layout_alignBaseline="@+id/annoyedCheckBox"
        android:layout_alignBottom="@+id/annoyedCheckBox"
        android:layout_toEndOf="@+id/annoyedCheckBox"
        android:layout_marginStart="32dp" />

    <CheckBox
        android:text="@string/annoyed_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/annoyedCheckBox"
        android:layout_alignBaseline="@+id/happyCheckBox"
        android:layout_alignBottom="@+id/happyCheckBox"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/customer_service_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customerServiceTextView"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/ratingScaleSpinner"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/ratingScaleSpinner"
        android:entries="@array/ratingScale"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/happyCheckBox"
        android:layout_alignParentStart="true"
        android:layout_width="110dp" />

    <Button
        android:text="@string/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/submitButton"
        android:layout_alignStart="@+id/annoyedCheckBox"
        android:id="@+id/clearButton" />

    <Button
        android:text="@string/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/clearButton"
        android:layout_alignEnd="@+id/fairCheckBox"
        android:id="@+id/exitButton" />

    <Button
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/currentscore_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:id="@+id/currentScoreTextView" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/finalscore_edit_text"
        android:ems="10"
        android:id="@+id/finalScoreEditText"
        android:layout_alignBaseline="@+id/finalScoreTextView"
        android:layout_alignBottom="@+id/finalScoreTextView"
        android:layout_alignStart="@+id/fairCheckBox"
        android:inputType="number"
        android:hint="@string/finalscore_results_hint" />

    <TextView
        android:text="@string/finalscore_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalScoreTextView"
        android:layout_alignBaseline="@+id/currentScoreTextView"
        android:layout_alignBottom="@+id/currentScoreTextView"
        android:layout_toStartOf="@+id/finalScoreEditText" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/currentscore_edit_text"
        android:ems="10"
        android:id="@+id/currentScoreEditText"
        android:layout_alignBaseline="@+id/currentScoreTextView"
        android:layout_alignBottom="@+id/currentScoreTextView"
        android:inputType="number"
        android:hint="@string/currentscore_results"
        android:layout_alignEnd="@+id/nameEstablishmentTextView"
        android:layout_toEndOf="@+id/happyCheckBox" />


</RelativeLayout>
